table bumped up further to ensure submit edit buttom visible

--- a/static/styles/stylesheetv1.css
+++ b/static/styles/stylesheetv1.css
@@ -115,7 +115,7 @@ thead th {
 }
 
 tbody {
-    height: 480px;
+    height: 450px;
     overflow-y: auto;
 }
 
